# partyDecider

./: .gitignore  LICENSE.txt  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: __init__.py  __main__.py  admin.py  crud.py  db.py  dependencies.py  frontend_integration.py  main.py  models.py  openapi.py  pd_types.py  public.py  resources.py  schemas.py  state.py  utils.py
backend/models/: __init__.py  database.py
backend/vdf/: game_gatherer.py  vdfparser.py
backend/voting/: ballot.py  session.py
backend/voting/systems/: maths.py  simple.py
doc/: README.md  architecture.puml
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/openapi-overrides/: apis.mustache
frontend/src/: App.svelte  network.ts  vite-env.d.ts
frontend/src/api/.openapi-generator/: FILES
frontend/src/api/apis/: AdminApi.ts  PublicApi.ts  ResourcesApi.ts  index.ts
frontend/src/api/models/: App.ts  Ballot.ts  Message.ts  NewVotingSession.ts  VotingItem.ts  VotingSession.ts  VotingSessionResult.ts  index.ts
frontend/src/lib/: AddPoll.svelte  GameList.svelte  ManagePolls.svelte  Nav.svelte  NoPolls.svelte  Poll.svelte  PollList.svelte  PollResultTable.svelte  RescanSteam.svelte  Shutdown.svelte  VoteGrid.svelte  VoteGridItem.svelte  VoteGridLevel.svelte  build.ts  dragLib.ts  editHistory.ts  extra.css  itertools.ts  models.ts  utils.ts
frontend/src/routes/: Admin.svelte  CurrentPoll.svelte  Poll.svelte  PollList.svelte
